--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
     "nuxt": "^3.13.0",
+    "nuxt-gtag": "^3.0.1",
     "vue": "latest",
     "vue-router": "latest"
   },
